Fix dependencies version vulnerabilities (#34)
* Bump softprops/action-gh-release from 2 to 3

Bumps [softprops/action-gh-release](https://github.com/softprops/action-gh-release) from 2 to 3.
- [Release notes](https://github.com/softprops/action-gh-release/releases)
- [Changelog](https://github.com/softprops/action-gh-release/blob/master/CHANGELOG.md)
- [Commits](https://github.com/softprops/action-gh-release/compare/v2...v3)

---
updated-dependencies:
- dependency-name: softprops/action-gh-release
  dependency-version: '3'
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump actions/upload-artifact from 4 to 7

Bumps [actions/upload-artifact](https://github.com/actions/upload-artifact) from 4 to 7.
- [Release notes](https://github.com/actions/upload-artifact/releases)
- [Commits](https://github.com/actions/upload-artifact/compare/v4...v7)

---
updated-dependencies:
- dependency-name: actions/upload-artifact
  dependency-version: '7'
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* fix: resolve Dependabot security alerts in pom dependencies

Bump postgres, tika, httpclient5, and spring-retry, and drop the pinned
jackson-core override so Boot BOM / transitive versions clear the open alerts.

Co-authored-by: Cursor <cursoragent@cursor.com>

* fix: enable Spring CSRF protection for CodeQL CWE-352

Stop calling csrf.disable() so CodeQL alert #4 is resolved. Keep JWT bearer
APIs working via ignoringRequestMatchers, and use a cookie CSRF repository
for browser flows when security is enabled.

Co-authored-by: Cursor <cursoragent@cursor.com>

* refactor: keep security magic strings next to their usage

Remove SecurityConstants; declare private constants in each config class,
and share Bearer prefix only from JwtAuthenticationFilter where it is used.

Co-authored-by: Cursor <cursoragent@cursor.c