@@ -3,18 +3,21 @@ package com.olx.boilerplate.infrastructure.appConfig;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpHeaders;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.olx.boilerplate.infrastructure.components.JwtAuthenticationFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -22,6 +25,22 @@ import java.util.List;
 @EnableMethodSecurity
 @ConditionalOnProperty(name = "spring.security.enabled", havingValue = "true", matchIfMissing = false)
 public class SecurityConfig {
+
+    private static final String[] PUBLIC_ENDPOINTS = {
+            "/health",
+            "/swagger-ui/**",
+            "/v3/api-docs/**",
+            "/actuator/**"
+    };
+    private static final String CORS_PATH_PATTERN = "/**";
+    private static final String CORS_ALLOW_ALL = "*";
+    private static final String[] CORS_ALLOWED_METHODS = {
+            "GET",
+            "POST",
+            "PUT",
+            "DELETE",
+            "OPTIONS"
+    };
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
@@ -31,11 +50,19 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http.csrf(csrf -> csrf.disable())
+        http.csrf(csrf -> csrf
+                        .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
+                        // JWT bearer APIs do not use cookie session auth; CSRF applies to browser/cookie flows.
+                        .ignoringRequestMatchers(request -> {
+                            String authorization = request.getHeader(HttpHeaders.AUTHORIZATION);
+                            return authorization != null && authorization.regionMatches(true, 0,
+                                            JwtAuthenticationFilter.BEARER_PREFIX, 0,
+                                            JwtAuthenticationFilter.BEARER_PREFIX_LENGTH);
+                        }))
                         .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                         .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                         .authorizeHttpRequests(auth -> auth
-                                        .requestMatchers("/health", "/swagger-ui/**", "/v3/api-docs/**", "/actuator/**")
+                                        .requestMatchers(PUBLIC_ENDPOINTS)
                                         .permitAll()
                                         .anyRequest().authenticated())
                         .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -45,11 +72,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedOrigins(List.of(CORS_ALLOW_ALL));
+        configuration.setAllowedMethods(Arrays.asList(CORS_ALLOWED_METHODS));
+        configuration.setAllowedHeaders(List.of(CORS_ALLOW_ALL));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration(CORS_PATH_PATTERN, configuration);
         return source;
     }
 }
